--- a/kingWeb/kingWeb/templates/adm/department/index.html
+++ b/kingWeb/kingWeb/templates/adm/department/index.html
@@ -46,7 +46,7 @@
                 },
                 "bSortable": false
             },
-            { "mData": "rownum", "sClass": "text-center" },
+            { "mData": "rownum", "sClass": "text-center", "bSortable": false },
             { "mData": "name", "name": "name", "sClass": "text-center" },
             { "mData": "parentname", "sClass": "text-center" },
             { "mData": "leader", "name": "leader", "sClass": "text-center" },
