--- a/kingWeb/kingWeb/templates/adm/menu/index.html
+++ b/kingWeb/kingWeb/templates/adm/menu/index.html
@@ -50,7 +50,7 @@
                 },
                 "bSortable": false
             },
-            { "mData": "rownum", "sClass": "text-center" },
+            { "mData": "rownum", "sClass": "text-center", "bSortable": false },
             { "mData": "modulename", "name": "moduleid", "sClass": "text-center" },
             { "mData": "parentname", "name": "parentid", "sClass": "text-center" },
             { "mData": "typename", "name": "type", "sClass": "text-center" },
