--- a/kingWeb/kingWeb/templates/adm/module/index.html
+++ b/kingWeb/kingWeb/templates/adm/module/index.html
@@ -45,7 +45,7 @@
                 },
                 "bSortable": false
             },
-            { "mData": "rownum", "sClass": "text-center" },
+            { "mData": "rownum", "sClass": "text-center", "bSortable": false },
             { "mData": "name", "name": "name", "sClass": "text-center" },
             { "mData": "description", "sClass": "text-center" }
         ];
