--- a/kingWeb/kingWeb/templates/adm/viewlist/index.html
+++ b/kingWeb/kingWeb/templates/adm/viewlist/index.html
@@ -149,7 +149,7 @@
                     },
                     "bSortable": false
                 },
-                { "mData": "rownum", "sClass": "text-center" },
+            { "mData": "rownum", "sClass": "text-center", "bSortable": false },
                  {% load set_val %}
                {% set str = "{{'mData': '{0}', 'sClass': 'text-center'}}," %}
                {% set hiddenstr = "{{'mData': '{0}','visible': false, 'sClass': 'text-center'}},"%}
