--- a/kingWeb/kingWeb/templates/adm/shared/layout_content.html
+++ b/kingWeb/kingWeb/templates/adm/shared/layout_content.html
@@ -16,17 +16,18 @@
     <script src="{% static 'lib/zTree/js/jquery.ztree.core.js' %}"></script>
     <script src="{% static 'lib/zTree/js/jquery.ztree.excheck.js' %}"></script>
 
+    <!--datatable-->
+    <script src="{%static 'lib/datatables/media/js/jquery.dataTables.min.js' %}"></script>
+    <link href="{%static 'lib/datatables/media/css/jquery.dataTables.css' %}" rel="stylesheet" />
+
     <!--Bootstrap-->
     <script src="{%static 'lib/bootstrap/dist/js/bootstrap.js' %}"></script>
     <link href="{%static 'lib/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet" />
     <link href="{%static 'lib/bootstrap/dist/css/bootstrap-theme.min.css' %}" rel="stylesheet" />
     <link href="{%static 'lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" />
-
     <script src="{% static 'lib/bootstrap-suggest-plugin/dist/bootstrap-suggest.min.js' %}"></script>
 
-    <script src="{%static 'lib/datatables/media/css/jquery.dataTables.min.css' %}"></script>
-    <script src="{%static 'lib/datatables/media/js/jquery.dataTables.min.js' %}"></script>
-
+    <!--echart-->
     <script src="{% static 'lib/echart/echarts-all.js'%}"></script>
 
     <!--Layer-->
@@ -37,7 +38,9 @@
     <link href="{%static 'css/site.css' %}" rel="stylesheet" />
 
     {% block styles %}    {% endblock %}
+    <style>
 
+    </style>
 </head>
 <body>
     <div class="ibox">
