--- a/kingWeb/kingWeb/templates/adm/user/login.html
+++ b/kingWeb/kingWeb/templates/adm/user/login.html
@@ -4,7 +4,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
 
     <script src="{% static 'lib/jquery/dist/jquery.min.js' %}"></script>
@@ -13,15 +14,16 @@
     <script src="{% static 'lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js' %}"></script>
 
     <script src="{% static 'lib/bootstrap/dist/js/bootstrap.js' %}"></script>
-    {#<link href="{% static 'lib/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet" />#}
+    <link href="{% static 'lib/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet" />
     <link href="{% static 'lib/bootstrap/dist/css/bootstrap-theme.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" />
+
     <script src="{% static 'lib/layer/src/layer.js' %}"></script>
     <script src="{% static 'js/lkWeb.js' %}"></script>
-    <link href="{% static 'css/login/css/base.css' %}" rel="stylesheet" />
 
-    <link href="{% static 'css/login/css/login.css' %}" rel="stylesheet" />
-    <link rel="stylesheet" href="{% static 'css/site.css' %}" asp-append-version="true" />
+    <link rel="stylesheet" href="{% static 'css/site.css' %}"  />
 
+ <link rel="stylesheet" href="{% static 'css/login.css' %}"  />
     <script type="text/javascript">
     $(function () {
         lkWeb.FormValidation($("#loginForm"), function () {
@@ -37,29 +39,42 @@
 
     </head>
 <body>
-    <div class="login">
-        <form action="/adm/user/post_login/" method="post" role="form" id="loginForm">
-              {%csrf_token%}
-            <div class="logo"></div>
-            <div class="login_form">
-                <div class="user">
-                    <input type="text" class="text_value" id="txtUserName" name="UserName" placeholder="请输入登陆账户"
+  <div class="sucaihuo-container">
+		<div class="demo form-bg" style="padding: 20px 0;">
+		        <div class="container">
+		            <div class="row">
+		                <div class="col-md-offset-3 col-md-6 col-xs-9" style=" margin-top: 12%;">
+		                    <form action="/adm/user/post_login/" method="post" role="form" id="loginForm" class="form-horizontal">
+                               {%csrf_token%}
+		                        <span class="heading">用户登录</span>
+		                        <div class="form-group">
+		                            <input type="text" class="form-control" name="UserName" placeholder="请输入登陆账户"
                            data-val="true" data-val-maxlength="用户名长度不能超过20个字符" data-val-maxlength-max="20"
                            data-val-minlength="用户名长度不能少于2个字符" data-val-minlength-min="2" data-val-required="用户名不能为空" />
-                    <span class="field-validation-valid" data-valmsg-for="UserName" data-valmsg-replace="true"></span>
-                    <input type="password" class="text_value" id="txtPwd" name="Password" placeholder="请输入密码"
+                        <span class="field-validation-valid" data-valmsg-for="UserName" data-valmsg-replace="true"></span>
+		                            <i class="fa fa-user"></i>
+		                        </div>
+		                        <div class="form-group help">
+		                            <input type="password" class="form-control" name="Password" placeholder="请输入密码"
                            data-val="true" data-val-maxlength="密码长度不能超过20个字符" data-val-maxlength-max="20"
                            data-val-minlength="密码长度不能少于3个字符" data-val-minlength-min="2" data-val-required="密码不能为空" />
                     <span class="field-validation-valid" data-valmsg-for="Password" data-valmsg-replace="true"></span>
-                </div>
-                <button type="submit" class="button">登录</button>
-            </div>
-
-            <div id="tip"></div>
-            <div class="foot">
-            </div>
-        </form>
-    </div>
-
+		                            <i class="fa fa-lock"></i>
+		                            <a href="#" class="fa fa-question-circle"></a>
+		                        </div>
+		                        <div class="form-group">
+		                            <div class="main-checkbox">
+		                                <input type="checkbox" value="None" id="chkRemember" name="check"/>
+		                                <label for="chkRemember"></label>
+		                            </div>
+		                            <span class="text">Remember me</span>
+		                            <button type="submit" class="btn btn-default">登录</button>
+		                        </div>
+		                    </form>
+		                </div>
+		            </div>
+		        </div>
+		    </div>
+	</div>
 </body>
 </html>
